Fixed positioning of tab menu span content, no longer shifts when loading icon appears

--- a/OmniDB/OmniDB_app/static/OmniDB_app/new/css/omnidb.css
+++ b/OmniDB/OmniDB_app/static/OmniDB_app/new/css/omnidb.css
@@ -526,6 +526,12 @@
 }
 
 
+/* TAB MENU */
+.omnidb__tab-menu__link-name span {
+  vertical-align: middle;
+}
+
+
 /* NAV */
 .omnidb__tab-menu .nav-tabs .nav-link {
   border-top-left-radius: 0px;
